Add asset update header

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -11,5 +11,6 @@
   "loadingText_message7": "Spilling Coffee...",
   "loadingText_message8": "Becoming A Goat...",
   "loadingText_message9": "Charging Batteries...",
-  "loadingText_message10": "Reticulating Splines..."
+  "loadingText_message10": "Reticulating Splines...",
+  "headerMessaging_newData": "New data is available! Click here to update."
 }
