--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -12,5 +12,6 @@
   "loadingText_message8": "Becoming A Goat...",
   "loadingText_message9": "Charging Batteries...",
   "loadingText_message10": "Reticulating Splines...",
+  "loadingText_message11": "Coffee, Cheetos, Chicken...",
   "headerMessaging_newData": "New data is available! Click here to update."
 }
