Add query to tab buttons!

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -13,5 +13,24 @@
   "loadingText_message9": "Charging Batteries...",
   "loadingText_message10": "Reticulating Splines...",
   "loadingText_message11": "Coffee, Cheetos, Chicken...",
-  "headerMessaging_newData": "New data is available! Click here to update."
+  "headerMessaging_newData": "New data is available! Click here to update.",
+  "assembler": "Assembler",
+  "biomass_burner": "Biomass Burner",
+  "coal_generator": "Coal Generator",
+  "constructor": "Constructor",
+  "converter": "Converter",
+  "foundry": "Foundry",
+  "fuel_generator": "Fuel Generator",
+  "geo_thermal_generator": "Geo Thermal Generator",
+  "hadron_collider": "Hadron Collider",
+  "industrial_storage_container": "Industrial Storage Container",
+  "manufacturer": "Manufacturer",
+  "miner": "Miner",
+  "nuclear_power_plant": "Nuclear Power Plant",
+  "oil_pump": "Oil Pump",
+  "oil_refinery": "Oil Refinery",
+  "quantum_encoder": "Quantum Encoder",
+  "remote_storage": "Remote Storage",
+  "smelter": "Smelter",
+  "storage_container": "Storage Container"
 }
