--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -28,9 +28,162 @@
   "miner": "Miner",
   "nuclear_power_plant": "Nuclear Power Plant",
   "oil_pump": "Oil Pump",
-  "oil_refinery": "Oil Refinery",
-  "quantum_encoder": "Quantum Encoder",
+  "oil_refinery": "Refinery",
+  "quantum_encoder": "Encoder",
   "remote_storage": "Remote Storage",
   "smelter": "Smelter",
-  "storage_container": "Storage Container"
+  "storage_container": "Storage Container",
+  "currently_selected": "Selected:",
+  "selected_none": "None",
+  "MK1": "Mk. I",
+  "MK2": "Mk. II",
+  "MK3": "Mk. III",
+  "MK4": "Mk. IV",
+  "MK5": "Mk. V",
+  "cable": "Cable",
+  "encased_industrial_beam": "Encased Industrial Beam",
+  "quickwire": "Quickwire",
+  "modular_frame": "Modular Frame",
+  "heat_sink": "Heat Sink",
+  "electromagnetic_control_rod": "Electromagnetic Control Rod",
+  "black_powder": "Black Powder",
+  "stator": "Stator",
+  "silica": "Silica",
+  "concrete": "Concrete",
+  "compacted_coal": "Compacted Coal",
+  "reinforced_iron_plate": "Reinforced Iron Plate",
+  "circuit_board": "Circuit Board",
+  "computer": "Computer",
+  "plastic": "Plastic",
+  "rotor": "Rotor",
+  "turbofuel": "Turbofuel",
+  "s.a.m_fluctuator": "S.A.M Fluctuator",
+  "a.i._limiter": "A.i. Limiter",
+  "alclad_aluminum_sheet": "Alclad Aluminum Sheet",
+  "cartridge": "Cartridge",
+  "motor": "Motor",
+  "uranium_cell": "Uranium Cell",
+  "fabric": "Fabric",
+  "wire": "Wire",
+  "coal": "Coal",
+  "screw": "Screw",
+  "spiked_rebar": "Spiked Rebar",
+  "iron_plate": "Iron Plate",
+  "biomass": "Biomass",
+  "biofuel": "Biofuel",
+  "power_shard": "Power Shard",
+  "color_cartridge": "Color Cartridge",
+  "steel_pipe": "Steel Pipe",
+  "iron_rod": "Iron Rod",
+  "steel_beam": "Steel Beam",
+  "quartz_crystal": "Quartz Crystal",
+  "steel_ingot": "Steel Ingot",
+  "aluminum_ingot": "Aluminum Ingot",
+  "turbo_motor": "Turbo Motor",
+  "high-speed_connector": "High-speed Connector",
+  "beacon": "Beacon",
+  "crystal_oscillator": "Crystal Oscillator",
+  "heavy_modular_frame": "Heavy Modular Frame",
+  "quickwire_computer": "Quickwire Computer",
+  "nobelisk": "Nobelisk",
+  "radio_control_unit": "Radio Control Unit",
+  "nuclear_fuel_rod": "Nuclear Fuel Rod",
+  "supercomputer": "Supercomputer",
+  "iodine_infused_filter": "Iodine Infused Filter",
+  "filter": "Filter",
+  "battery": "Battery",
+  "quantum_computer": "Quantum Computer",
+  "bauxite": "Bauxite",
+  "caterium_ore": "Caterium Ore",
+  "copper_ore": "Copper Ore",
+  "iron_ore": "Iron Ore",
+  "limestone": "Limestone",
+  "raw_quartz": "Raw Quartz",
+  "s.a.m._ore": "S.A.M. Ore",
+  "sulfur": "Sulfur",
+  "uranium": "Uranium",
+  "crude_oil": "Crude Oil",
+  "rubber": "Rubber",
+  "fuel": "Fuel",
+  "quantum_crystal": "Quantum Crystal",
+  "superposition_oscillator": "Superposition Oscillator",
+  "caterium_ingot": "Caterium Ingot",
+  "s.a.m._ingot": "S.A.M. Ingot",
+  "copper_ingot": "Copper Ingot",
+  "iron_ingot": "Iron Ingot",
+  "alternate:_turbo_motor": "Alternate: Turbo Motor",
+  "alternate:_black_powder": "Alternate: Black Powder",
+  "alternate:_stator": "Alternate: Stator",
+  "alternate:_silica": "Alternate: Silica",
+  "alternate:_high-speed_connector": "Alternate: High-speed Connector",
+  "biomass_(alien_organs)": "Biomass (alien Organs)",
+  "alternate:_concrete": "Alternate: Concrete",
+  "alternate:_compacted_coal": "Alternate: Compacted Coal",
+  "power_shard_(1)": "Power Shard (1)",
+  "alternate:_cable": "Alternate: Cable",
+  "iron_wire": "Iron Wire",
+  "alternate:_beacon": "Alternate: Beacon",
+  "wood_coal": "Wood Coal",
+  "alternate:_reinforced_iron_plate": "Alternate: Reinforced Iron Plate",
+  "quickwire_circuit_board": "Quickwire Circuit Board",
+  "biomass_(wood)": "Biomass (wood)",
+  "enriched_steel_ingot": "Enriched Steel Ingot",
+  "alternate:_circuit_board": "Alternate: Circuit Board",
+  "biomass_(alien_carapace)": "Biomass (alien Carapace)",
+  "power_shard_(2)": "Power Shard (2)",
+  "biomass_(mycelia)": "Biomass (mycelia)",
+  "alternate:_screw": "Alternate: Screw",
+  "biomass_coal": "Biomass Coal",
+  "alternate:_steel_ingot": "Alternate: Steel Ingot",
+  "alternate:_crystal_oscillator": "Alternate: Crystal Oscillator",
+  "crystal_computer": "Crystal Computer",
+  "alternate:_heavy_modular_frame": "Alternate: Heavy Modular Frame",
+  "alternate:_plastic": "Alternate: Plastic",
+  "alternate:_motor": "Alternate: Motor",
+  "stitched_iron_plate": "Stitched Iron Plate",
+  "caterium_wire": "Caterium Wire",
+  "iron_ingot_alloy": "Iron Ingot Alloy",
+  "alternate:_rotor": "Alternate: Rotor",
+  "steel_screw": "Steel Screw",
+  "biomass_(leaves)": "Biomass (leaves)",
+  "alternate:_uranium_cell": "Alternate: Uranium Cell",
+  "alternate:_computer": "Alternate: Computer",
+  "alternate:_nobelisk": "Alternate: Nobelisk",
+  "power_shard_(5)": "Power Shard (5)",
+  "alternate:_radio_control_unit": "Alternate: Radio Control Unit",
+  "alternate:_nuclear_fuel_rod": "Alternate: Nuclear Fuel Rod",
+  "alternate:_turbofuel": "Alternate: Turbofuel",
+  "impure_bauxite_node": "Impure Bauxite Node",
+  "normal_bauxite_node": "Normal Bauxite Node",
+  "pure_bauxite_node": "Pure Bauxite Node",
+  "impure_caterium_ore_node": "Impure Caterium Ore Node",
+  "normal_caterium_ore_node": "Normal Caterium Ore Node",
+  "pure_caterium_ore_node": "Pure Caterium Ore Node",
+  "impure_coal_node": "Impure Coal Node",
+  "normal_coal_node": "Normal Coal Node",
+  "pure_coal_node": "Pure Coal Node",
+  "impure_copper_ore_node": "Impure Copper Ore Node",
+  "normal_copper_ore_node": "Normal Copper Ore Node",
+  "pure_copper_ore_node": "Pure Copper Ore Node",
+  "impure_crude_oil_node": "Impure Crude Oil Node",
+  "normal_crude_oil_node": "Normal Crude Oil Node",
+  "pure_crude_oil_node": "Pure Crude Oil Node",
+  "impure_iron_ore_node": "Impure Iron Ore Node",
+  "normal_iron_ore_node": "Normal Iron Ore Node",
+  "pure_iron_ore_node": "Pure Iron Ore Node",
+  "impure_limestone_node": "Impure Limestone Node",
+  "normal_limestone_node": "Normal Limestone Node",
+  "pure_limestone_node": "Pure Limestone Node",
+  "impure_raw_quartz_node": "Impure Raw Quartz Node",
+  "normal_raw_quartz_node": "Normal Raw Quartz Node",
+  "pure_raw_quartz_node": "Pure Raw Quartz Node",
+  "impure_sam_ore_node": "Impure Sam Ore Node",
+  "normal_sam_ore_node": "Normal Sam Ore Node",
+  "pure_sam_ore_node": "Pure Sam Ore Node",
+  "impure_sulfur_node": "Impure Sulfur Node",
+  "normal_sulfur_node": "Normal Sulfur Node",
+  "pure_sulfur_node": "Pure Sulfur Node",
+  "impure_uranium_node": "Impure Uranium Node",
+  "normal_uranium_node": "Normal Uranium Node",
+  "pure_uranium_node": "Pure Uranium Node"
 }
