Add test invocation

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -116,7 +116,7 @@
   "alternate:_stator": "Alternate: Stator",
   "alternate:_silica": "Alternate: Silica",
   "alternate:_high-speed_connector": "Alternate: High-speed Connector",
-  "biomass_(alien_organs)": "Biomass (alien Organs)",
+  "biomass_(alien_organs)": "Biomass (Alien Organs)",
   "alternate:_concrete": "Alternate: Concrete",
   "alternate:_compacted_coal": "Alternate: Compacted Coal",
   "power_shard_(1)": "Power Shard (1)",
@@ -126,12 +126,12 @@
   "wood_coal": "Wood Coal",
   "alternate:_reinforced_iron_plate": "Alternate: Reinforced Iron Plate",
   "quickwire_circuit_board": "Quickwire Circuit Board",
-  "biomass_(wood)": "Biomass (wood)",
+  "biomass_(wood)": "Biomass (Wood)",
   "enriched_steel_ingot": "Enriched Steel Ingot",
   "alternate:_circuit_board": "Alternate: Circuit Board",
-  "biomass_(alien_carapace)": "Biomass (alien Carapace)",
+  "biomass_(alien_carapace)": "Biomass (Alien Carapace)",
   "power_shard_(2)": "Power Shard (2)",
-  "biomass_(mycelia)": "Biomass (mycelia)",
+  "biomass_(mycelia)": "Biomass (Mycelia)",
   "alternate:_screw": "Alternate: Screw",
   "biomass_coal": "Biomass Coal",
   "alternate:_steel_ingot": "Alternate: Steel Ingot",
@@ -145,7 +145,7 @@
   "iron_ingot_alloy": "Iron Ingot Alloy",
   "alternate:_rotor": "Alternate: Rotor",
   "steel_screw": "Steel Screw",
-  "biomass_(leaves)": "Biomass (leaves)",
+  "biomass_(leaves)": "Biomass (Leaves)",
   "alternate:_uranium_cell": "Alternate: Uranium Cell",
   "alternate:_computer": "Alternate: Computer",
   "alternate:_nobelisk": "Alternate: Nobelisk",
@@ -153,6 +153,12 @@
   "alternate:_radio_control_unit": "Alternate: Radio Control Unit",
   "alternate:_nuclear_fuel_rod": "Alternate: Nuclear Fuel Rod",
   "alternate:_turbofuel": "Alternate: Turbofuel",
+  "quickwire_cable": "Quickwire Cable",
+  "alternate:_encased_industrial_beam": "Alternate: Encased Industrial Beam",
+  "alternate:_quickwire": "Alternate: Quickwire",
+  "alternate:_modular_frame": "Alternate: Modular Frame",
+  "alternate:_heat_sink": "Alternate: Heat Sink",
+  "alternate:_electromagnetic_control_rod": "Alternate: Electromagnetic Control Rod",
   "impure_bauxite_node": "Impure Bauxite Node",
   "normal_bauxite_node": "Normal Bauxite Node",
   "pure_bauxite_node": "Pure Bauxite Node",
