Fixup images, node linkages, and protobuf
Signed-off-by: Alex <aafu@ucdavis.edu>

--- a/src/translations/discord.json
+++ b/src/translations/discord.json
@@ -191,5 +191,6 @@
   "pure_sulfur_node": "Pure Sulfur Node",
   "impure_uranium_node": "Impure Uranium Node",
   "normal_uranium_node": "Normal Uranium Node",
-  "pure_uranium_node": "Pure Uranium Node"
+  "pure_uranium_node": "Pure Uranium Node",
+  "no_production": "Idle"
 }
