Add in some recipe editing (super super early)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,19 +1,19 @@
 {
   "greeting": "Hello",
   "farewell": "Goodbye",
-  "loadingText_message0": "Loading...",
-  "loadingText_message1": "Burning Coal...",
-  "loadingText_message2": "Deleting Steam Keys...",
-  "loadingText_message3": "Exploiting Resources...",
-  "loadingText_message4": "Petting Lizard Doggo...",
-  "loadingText_message5": "Adding Pipes...",
-  "loadingText_message6": "Adding Mana...",
-  "loadingText_message7": "Spilling Coffee...",
-  "loadingText_message8": "Becoming A Goat...",
-  "loadingText_message9": "Charging Batteries...",
-  "loadingText_message10": "Reticulating Splines...",
-  "loadingText_message11": "Coffee, Cheetos, Chicken...",
-  "headerMessaging_newData": "New data is available! Click here to update.",
+  "loadingText_message0": "Loading",
+  "loadingText_message1": "Burning Coal",
+  "loadingText_message2": "Deleting Steam Keys",
+  "loadingText_message3": "Exploiting Resources",
+  "loadingText_message4": "Petting Lizard Doggo",
+  "loadingText_message5": "Adding Pipes",
+  "loadingText_message6": "Adding Mana",
+  "loadingText_message7": "Spilling Coffee",
+  "loadingText_message8": "Becoming A Goat",
+  "loadingText_message9": "Charging Batteries",
+  "loadingText_message10": "Reticulating Splines",
+  "loadingText_message11": "Coffee, Cheetos, Chicken",
+  "headerMessaging_newData": "New data is available! Click here to update",
   "assembler": "Assembler",
   "biomass_burner": "Biomass Burner",
   "coal_generator": "Coal Generator",
@@ -35,11 +35,11 @@
   "storage_container": "Storage Container",
   "currently_selected": "Selected:",
   "selected_none": "None",
-  "MK1": "Mk. I",
-  "MK2": "Mk. II",
-  "MK3": "Mk. III",
-  "MK4": "Mk. IV",
-  "MK5": "Mk. V",
+  "MK1": "Mk I",
+  "MK2": "Mk II",
+  "MK3": "Mk III",
+  "MK4": "Mk IV",
+  "MK5": "Mk V",
   "cable": "Cable",
   "encased_industrial_beam": "Encased Industrial Beam",
   "quickwire": "Quickwire",
@@ -57,8 +57,8 @@
   "plastic": "Plastic",
   "rotor": "Rotor",
   "turbofuel": "Turbofuel",
-  "s.a.m_fluctuator": "S.A.M Fluctuator",
-  "a.i._limiter": "A.i. Limiter",
+  "sam_fluctuator": "SAM Fluctuator",
+  "ai_limiter": "Ai Limiter",
   "alclad_aluminum_sheet": "Alclad Aluminum Sheet",
   "cartridge": "Cartridge",
   "motor": "Motor",
@@ -80,7 +80,7 @@
   "steel_ingot": "Steel Ingot",
   "aluminum_ingot": "Aluminum Ingot",
   "turbo_motor": "Turbo Motor",
-  "high-speed_connector": "High-speed Connector",
+  "highspeed_connector": "High-speed Connector",
   "beacon": "Beacon",
   "crystal_oscillator": "Crystal Oscillator",
   "heavy_modular_frame": "Heavy Modular Frame",
@@ -99,7 +99,7 @@
   "iron_ore": "Iron Ore",
   "limestone": "Limestone",
   "raw_quartz": "Raw Quartz",
-  "s.a.m._ore": "S.A.M. Ore",
+  "sam_ore": "SAM Ore",
   "sulfur": "Sulfur",
   "uranium": "Uranium",
   "crude_oil": "Crude Oil",
@@ -108,57 +108,57 @@
   "quantum_crystal": "Quantum Crystal",
   "superposition_oscillator": "Superposition Oscillator",
   "caterium_ingot": "Caterium Ingot",
-  "s.a.m._ingot": "S.A.M. Ingot",
+  "sam_ingot": "SAM Ingot",
   "copper_ingot": "Copper Ingot",
   "iron_ingot": "Iron Ingot",
-  "alternate:_turbo_motor": "Alternate: Turbo Motor",
-  "alternate:_black_powder": "Alternate: Black Powder",
-  "alternate:_stator": "Alternate: Stator",
-  "alternate:_silica": "Alternate: Silica",
-  "alternate:_high-speed_connector": "Alternate: High-speed Connector",
-  "biomass_(alien_organs)": "Biomass (Alien Organs)",
-  "alternate:_concrete": "Alternate: Concrete",
-  "alternate:_compacted_coal": "Alternate: Compacted Coal",
-  "power_shard_(1)": "Power Shard (1)",
-  "alternate:_cable": "Alternate: Cable",
+  "alternate_turbo_motor": "Alternate: Turbo Motor",
+  "alternate_black_powder": "Alternate: Black Powder",
+  "alternate_stator": "Alternate: Stator",
+  "alternate_silica": "Alternate: Silica",
+  "alternate_highspeed_connector": "Alternate: High-speed Connector",
+  "biomass_alien_organs": "Biomass (Alien Organs)",
+  "alternate_concrete": "Alternate: Concrete",
+  "alternate_compacted_coal": "Alternate: Compacted Coal",
+  "power_shard_1": "Power Shard (1)",
+  "alternate_cable": "Alternate: Cable",
   "iron_wire": "Iron Wire",
-  "alternate:_beacon": "Alternate: Beacon",
+  "alternate_beacon": "Alternate: Beacon",
   "wood_coal": "Wood Coal",
-  "alternate:_reinforced_iron_plate": "Alternate: Reinforced Iron Plate",
+  "alternate_reinforced_iron_plate": "Alternate: Reinforced Iron Plate",
   "quickwire_circuit_board": "Quickwire Circuit Board",
-  "biomass_(wood)": "Biomass (Wood)",
+  "biomass_wood": "Biomass (Wood)",
   "enriched_steel_ingot": "Enriched Steel Ingot",
-  "alternate:_circuit_board": "Alternate: Circuit Board",
-  "biomass_(alien_carapace)": "Biomass (Alien Carapace)",
-  "power_shard_(2)": "Power Shard (2)",
-  "biomass_(mycelia)": "Biomass (Mycelia)",
-  "alternate:_screw": "Alternate: Screw",
+  "alternate_circuit_board": "Alternate: Circuit Board",
+  "biomass_alien_carapace": "Biomass (Alien Carapace)",
+  "power_shard_2": "Power Shard (2)",
+  "biomass_mycelia": "Biomass (Mycelia)",
+  "alternate_screw": "Alternate: Screw",
   "biomass_coal": "Biomass Coal",
-  "alternate:_steel_ingot": "Alternate: Steel Ingot",
-  "alternate:_crystal_oscillator": "Alternate: Crystal Oscillator",
+  "alternate_steel_ingot": "Alternate: Steel Ingot",
+  "alternate_crystal_oscillator": "Alternate: Crystal Oscillator",
   "crystal_computer": "Crystal Computer",
-  "alternate:_heavy_modular_frame": "Alternate: Heavy Modular Frame",
-  "alternate:_plastic": "Alternate: Plastic",
-  "alternate:_motor": "Alternate: Motor",
+  "alternate_heavy_modular_frame": "Alternate: Heavy Modular Frame",
+  "alternate_plastic": "Alternate: Plastic",
+  "alternate_motor": "Alternate: Motor",
   "stitched_iron_plate": "Stitched Iron Plate",
   "caterium_wire": "Caterium Wire",
   "iron_ingot_alloy": "Iron Ingot Alloy",
-  "alternate:_rotor": "Alternate: Rotor",
+  "alternate_rotor": "Alternate: Rotor",
   "steel_screw": "Steel Screw",
-  "biomass_(leaves)": "Biomass (Leaves)",
-  "alternate:_uranium_cell": "Alternate: Uranium Cell",
-  "alternate:_computer": "Alternate: Computer",
-  "alternate:_nobelisk": "Alternate: Nobelisk",
-  "power_shard_(5)": "Power Shard (5)",
-  "alternate:_radio_control_unit": "Alternate: Radio Control Unit",
-  "alternate:_nuclear_fuel_rod": "Alternate: Nuclear Fuel Rod",
-  "alternate:_turbofuel": "Alternate: Turbofuel",
+  "biomass_leaves": "Biomass (Leaves)",
+  "alternate_uranium_cell": "Alternate: Uranium Cell",
+  "alternate_computer": "Alternate: Computer",
+  "alternate_nobelisk": "Alternate: Nobelisk",
+  "power_shard_5": "Power Shard (5)",
+  "alternate_radio_control_unit": "Alternate: Radio Control Unit",
+  "alternate_nuclear_fuel_rod": "Alternate: Nuclear Fuel Rod",
+  "alternate_turbofuel": "Alternate: Turbofuel",
   "quickwire_cable": "Quickwire Cable",
-  "alternate:_encased_industrial_beam": "Alternate: Encased Industrial Beam",
-  "alternate:_quickwire": "Alternate: Quickwire",
-  "alternate:_modular_frame": "Alternate: Modular Frame",
-  "alternate:_heat_sink": "Alternate: Heat Sink",
-  "alternate:_electromagnetic_control_rod": "Alternate: Electromagnetic Control Rod",
+  "alternate_encased_industrial_beam": "Alternate: Encased Industrial Beam",
+  "alternate_quickwire": "Alternate: Quickwire",
+  "alternate_modular_frame": "Alternate: Modular Frame",
+  "alternate_heat_sink": "Alternate: Heat Sink",
+  "alternate_electromagnetic_control_rod": "Alternate: Electromagnetic Control Rod",
   "impure_bauxite_node": "Impure Bauxite Node",
   "normal_bauxite_node": "Normal Bauxite Node",
   "pure_bauxite_node": "Pure Bauxite Node",
