Fix async loading behavior, optimize for browser vs electron.
Signed-off-by: Alexander Fu <fualex@amazon.com>

--- a/src/translations/discord.json
+++ b/src/translations/discord.json
@@ -35,11 +35,11 @@
   "storage_container": "Storage Container",
   "currently_selected": "Selected:",
   "selected_none": "None",
-  "MK1": "Mk. I",
-  "MK2": "Mk. II",
-  "MK3": "Mk. III",
-  "MK4": "Mk. IV",
-  "MK5": "Mk. V",
+  "mk1": "Mk. I",
+  "mk2": "Mk. II",
+  "mk3": "Mk. III",
+  "mk4": "Mk. IV",
+  "mk5": "Mk. V",
   "cable": "Cable",
   "encased_industrial_beam": "Encased Industrial Beam",
   "quickwire": "Quickwire",
