Tweak recipe api

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -14,6 +14,7 @@
   "loadingText_message10": "Reticulating Splines",
   "loadingText_message11": "Coffee, Cheetos, Chicken",
   "headerMessaging_newData": "New data is available! Click here to update",
+  "per_minute": "Per Minute",
   "building-assembler": "Assembler",
   "building-constructor": "Constructor",
   "building-converter": "Converter",
@@ -370,6 +371,108 @@
   "recipe-truck": "Truck",
   "recipe-freight-wagon": "Freight Car",
   "recipe-locomotive": "Locomotive",
+  "item-iron-plate-reinforced": "Reinforced Iron Plate",
+  "item-modular-frame": "Modular Frame",
+  "item-cable": "Cable",
+  "item-iron-plate": "Iron Plate",
+  "item-steel-ingot": "Steel Ingot",
+  "item-copper-ingot": "Copper Ingot",
+  "item-rotor": "Rotor",
+  "item-fuel": "Packaged Fuel",
+  "item-aluminum-scrap": "Aluminum Scrap",
+  "item-water": "Water",
+  "item-circuit-board": "Circuit Board",
+  "item-space-elevator-part-2": "Versatile Framework",
+  "item-wire": "Wire",
+  "item-modular-frame-heavy": "Heavy Modular Frame",
+  "item-heavy-oil-residue": "Heavy Oil Residue",
+  "item-polymer-resin": "Polymer Resin",
+  "item-space-elevator-part-3": "Automated Wiring",
+  "item-space-elevator-part-1": "Smart Plating",
+  "item-fabric": "Fabric",
+  "item-gold-ingot": "Caterium Ingot",
+  "item-iron-ingot": "Iron Ingot",
+  "item-quartz-crystal": "Quartz Crystal",
+  "item-rubber": "Rubber",
+  "item-cement": "Concrete",
+  "item-copper-sheet": "Copper Sheet",
+  "item-iron-rod": "Iron Rod",
+  "item-liquid-turbo-fuel": "Turbofuel",
+  "item-aluminum-ingot": "Aluminum Ingot",
+  "item-equipment-descriptor-beacon": "Beacon",
+  "item-coal": "Coal",
+  "item-computer": "Computer",
+  "item-crystal-oscillator": "Crystal Oscillator",
+  "item-electromagnetic-control-rod": "Electromagnetic Control Rod",
+  "item-steel-plate-reinforced": "Encased Industrial Beam",
+  "item-compacted-coal": "Compacted Coal",
+  "item-gunpowder": "Black powder",
+  "item-aluminum-plate-reinforced": "Heat Sink",
+  "item-high-speed-connector": "High-Speed Connector",
+  "item-motor": "Motor",
+  "item-nobelisk-explosive": "Nobelisk",
+  "item-nuclear-fuel-rod": "Nuclear Fuel Rod",
+  "item-plastic": "Plastic",
+  "item-high-speed-wire": "Quickwire",
+  "item-modular-frame-lightweight": "Radio Control Unit",
+  "item-iron-screw": "Screw",
+  "item-silica": "Silica",
+  "item-stator": "Stator",
+  "item-motor-lightweight": "Turbo Motor",
+  "item-uranium-cell": "Encased Uranium Cell",
+  "item-circuit-board-high-speed": "A.I. Limiter",
+  "item-aluminum-plate": "Alclad Aluminum Sheet",
+  "item-biofuel": "Solid Biofuel",
+  "item-generic-biomass": "Biomass",
+  "item-fluid-canister": "Empty Canister",
+  "item-crystal-shard": "Power Shard",
+  "item-steel-plate": "Steel Beam",
+  "item-steel-pipe": "Steel Pipe",
+  "item-equipment-descriptor-jumping-stilts": "Blade Runners",
+  "item-cartridge-standard": "Rifle Cartridge",
+  "item-chainsaw": "Chainsaw",
+  "item-color-cartridge": "Color Cartridge",
+  "item-equipment-descriptor-color-gun": "Color Gun",
+  "item-filter": "Gas Filter",
+  "item-hazmat-filter": "Iodine Infused Filter",
+  "item-equipment-descriptor-gasmask": "Gas mask",
+  "item-equipment-descriptor-hazmat-suit": "Hazmat Suit",
+  "item-equipment-descriptor-jet-pack": "Jetpack",
+  "item-medkit": "Medicinal Inhaler",
+  "item-equipment-descriptor-nobelisk-detonator": "Nobelisk Detonator",
+  "item-equipment-descriptor-object-scanner": "Object Scanner",
+  "item-parachute": "Parachute",
+  "item-item-descriptor-portable-miner": "Portable Miner",
+  "item-rebar-gun-projectile": "Rebar Gun",
+  "item-equipment-descriptor-rifle": "Rifle",
+  "item-spiked-rebar": "Spiked Rebar",
+  "item-equipment-descriptor-stun-spear": "Xeno-Basher",
+  "item-equipment-descriptor-shock-shank": "Xeno-Zapper",
+  "item-battery": "Battery",
+  "item-computer-super": "Supercomputer",
+  "item-alumina-solution": "Alumina Solution",
+  "item-liquid-biofuel": "Liquid Biofuel",
+  "item-liquid-fuel": "Fuel",
+  "item-packaged-biofuel": "Packaged Liquid Biofuel",
+  "item-packaged-oil": "Packaged Oil",
+  "item-packaged-oil-residue": "Packaged Heavy Oil Residue",
+  "item-turbo-fuel": "Packaged Turbofuel",
+  "item-packaged-water": "Packaged Water",
+  "item-petroleum-coke": "Petroleum Coke",
+  "item-sulfuric-acid": "Sulfuric Acid",
+  "item-liquid-oil": "Crude Oil",
+  "item-uranium-pellet": "Uranium Pellet",
+  "item-space-elevator-part-4": "Modular Engine",
+  "item-space-elevator-part-5": "Adaptive Control Unit",
+  "item-golf-cart": "Factory Cart™",
+  "item-ore-iron": "Iron Ore",
+  "item-ore-copper": "Copper Ore",
+  "item-ore-gold": "Caterium Ore",
+  "item-raw-quartz": "Raw Quartz",
+  "item-stone": "Limestone",
+  "item-sulfur": "Sulfur",
+  "item-ore-bauxite": "Bauxite",
+  "item-ore-uranium": "Uranium",
 
   "currently_selected": "Selected:",
   "selected_none": "None",
