Add a demo wizard

--- a/src/translations/discord.json
+++ b/src/translations/discord.json
@@ -111,54 +111,54 @@
   "s.a.m._ingot": "S.A.M. Ingot",
   "copper_ingot": "Copper Ingot",
   "iron_ingot": "Iron Ingot",
-  "alternate:_turbo_motor": "Alternate: Turbo Motor",
-  "alternate:_black_powder": "Alternate: Black Powder",
-  "alternate:_stator": "Alternate: Stator",
-  "alternate:_silica": "Alternate: Silica",
-  "alternate:_high-speed_connector": "Alternate: High-speed Connector",
+  "alternate:_turbo_motor": "Turbo Motor",
+  "alternate:_black_powder": "Black Powder",
+  "alternate:_stator": "Stator",
+  "alternate:_silica": "Silica",
+  "alternate:_high-speed_connector": "High-speed Connector",
   "biomass_(alien_organs)": "Biomass (Alien Organs)",
-  "alternate:_concrete": "Alternate: Concrete",
-  "alternate:_compacted_coal": "Alternate: Compacted Coal",
+  "alternate:_concrete": "Concrete",
+  "alternate:_compacted_coal": "Compacted Coal",
   "power_shard_(1)": "Power Shard (1)",
-  "alternate:_cable": "Alternate: Cable",
+  "alternate:_cable": "Cable",
   "iron_wire": "Iron Wire",
-  "alternate:_beacon": "Alternate: Beacon",
+  "alternate:_beacon": "Beacon",
   "wood_coal": "Wood Coal",
-  "alternate:_reinforced_iron_plate": "Alternate: Reinforced Iron Plate",
+  "alternate:_reinforced_iron_plate": "Reinforced Iron Plate",
   "quickwire_circuit_board": "Quickwire Circuit Board",
   "biomass_(wood)": "Biomass (Wood)",
   "enriched_steel_ingot": "Enriched Steel Ingot",
-  "alternate:_circuit_board": "Alternate: Circuit Board",
+  "alternate:_circuit_board": "Circuit Board",
   "biomass_(alien_carapace)": "Biomass (Alien Carapace)",
   "power_shard_(2)": "Power Shard (2)",
   "biomass_(mycelia)": "Biomass (Mycelia)",
-  "alternate:_screw": "Alternate: Screw",
+  "alternate:_screw": "Screw",
   "biomass_coal": "Biomass Coal",
-  "alternate:_steel_ingot": "Alternate: Steel Ingot",
-  "alternate:_crystal_oscillator": "Alternate: Crystal Oscillator",
+  "alternate:_steel_ingot": "Steel Ingot",
+  "alternate:_crystal_oscillator": "Crystal Oscillator",
   "crystal_computer": "Crystal Computer",
-  "alternate:_heavy_modular_frame": "Alternate: Heavy Modular Frame",
-  "alternate:_plastic": "Alternate: Plastic",
-  "alternate:_motor": "Alternate: Motor",
+  "alternate:_heavy_modular_frame": "Heavy Modular Frame",
+  "alternate:_plastic": "Plastic",
+  "alternate:_motor": "Motor",
   "stitched_iron_plate": "Stitched Iron Plate",
   "caterium_wire": "Caterium Wire",
   "iron_ingot_alloy": "Iron Ingot Alloy",
-  "alternate:_rotor": "Alternate: Rotor",
+  "alternate:_rotor": "Rotor",
   "steel_screw": "Steel Screw",
   "biomass_(leaves)": "Biomass (Leaves)",
-  "alternate:_uranium_cell": "Alternate: Uranium Cell",
-  "alternate:_computer": "Alternate: Computer",
-  "alternate:_nobelisk": "Alternate: Nobelisk",
+  "alternate:_uranium_cell": "Uranium Cell",
+  "alternate:_computer": "Computer",
+  "alternate:_nobelisk": "Nobelisk",
   "power_shard_(5)": "Power Shard (5)",
-  "alternate:_radio_control_unit": "Alternate: Radio Control Unit",
-  "alternate:_nuclear_fuel_rod": "Alternate: Nuclear Fuel Rod",
-  "alternate:_turbofuel": "Alternate: Turbofuel",
+  "alternate:_radio_control_unit": "Radio Control Unit",
+  "alternate:_nuclear_fuel_rod": "Nuclear Fuel Rod",
+  "alternate:_turbofuel": "Turbofuel",
   "quickwire_cable": "Quickwire Cable",
-  "alternate:_encased_industrial_beam": "Alternate: Encased Industrial Beam",
-  "alternate:_quickwire": "Alternate: Quickwire",
-  "alternate:_modular_frame": "Alternate: Modular Frame",
-  "alternate:_heat_sink": "Alternate: Heat Sink",
-  "alternate:_electromagnetic_control_rod": "Alternate: Electromagnetic Control Rod",
+  "alternate:_encased_industrial_beam": "Encased Industrial Beam",
+  "alternate:_quickwire": "Quickwire",
+  "alternate:_modular_frame": "Modular Frame",
+  "alternate:_heat_sink": "Heat Sink",
+  "alternate:_electromagnetic_control_rod": "Electromagnetic Control Rod",
   "impure_bauxite_node": "Impure Bauxite Node",
   "normal_bauxite_node": "Normal Bauxite Node",
   "pure_bauxite_node": "Pure Bauxite Node",
