--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -15,6 +15,7 @@
   "loadingText_message11": "Coffee, Cheetos, Chicken",
   "headerMessaging_newData": "New data is available! Click here to update",
   "per_minute": "Per Minute",
+  "n_per_min": "/ min",
   "building-assembler": "Assembler",
   "building-constructor": "Constructor",
   "building-converter": "Converter",
@@ -22,91 +23,82 @@
   "building-storage-container": "Storage Container",
   "building-manufacturer": "Manufacturer",
   "building-miner": "Miner",
-  "building-oil-pump": "Oil Pump",
-  "building-oil-refinery": "Refinery",
   "building-smelter": "Smelter",
-  "building-conveyor-attachment-merger": "Merger",
-  "building-conveyor-attachment-splitter": "Splitter",
-  "building-industrial-tank": "Industrial Tank",
-  "building-pipe-storage-tank": "Storage Tank",
-  "building-water-pump": "Water pump",
-  "building-pipeline-junction-cross": "Pipe Junction",
-  "building-pipeline-pump": "Pipeline Pump",
   "recipe-train-docking-station": "Freight Platform",
   "recipe-train-docking-station-liquid": "Fluid Freight Platform",
   "recipe-train-platform-empty": "Empty Platform",
   "recipe-train-station": "Train Station",
   "recipe-pipe-hyper-start": "Hyper Tube Entrance",
-  "recipe-alternate-adhered-iron-plate": "Alternate: Adhered Iron Plate",
-  "recipe-alternate-bolted-frame": "Alternate: Bolted Frame",
-  "recipe-alternate-coated-cable": "Alternate: Coated Cable",
-  "recipe-alternate-coated-iron-plate": "Alternate: Coated Iron Plate",
-  "recipe-alternate-coke-steel-ingot": "Alternate: Coke Steel Ingot",
-  "recipe-alternate-copper-alloy-ingot": "Alternate: Copper Alloy Ingot",
-  "recipe-alternate-copper-rotor": "Alternate: Copper Rotor",
-  "recipe-alternate-diluted-packaged-fuel": "Alternate: Diluted Packaged Fuel",
-  "recipe-alternate-electro-aluminum-scrap": "Alternate: Electrode - Aluminum Scrap",
-  "recipe-alternate-electrode-circuit-board": "Alternate: Electrode Circuit Board",
-  "recipe-alternate-flexible-framework": "Alternate: Flexible Framework",
-  "recipe-alternate-fused-wire": "Alternate: Fused Wire",
-  "recipe-alternate-heavy-flexible-frame": "Alternate: Heavy Flexible Frame",
-  "recipe-alternate-heavy-oil-residue": "Alternate: Heavy Oil Residue",
-  "recipe-alternate-high-speed-wiring": "Alternate: Automated Speed Wiring",
-  "recipe-alternate-plastic-smart-plating": "Alternate: Plastic Smart Plating",
-  "recipe-alternate-polyester-fabric": "Alternate: Polyester Fabric",
-  "recipe-alternate-polymer-resin": "Alternate: Polymer Resin",
-  "recipe-alternate-pure-caterium-ingot": "Alternate: Pure Caterium Ingot",
-  "recipe-alternate-pure-copper-ingot": "Alternate: Pure Copper Ingot",
-  "recipe-alternate-pure-iron-ingot": "Alternate: Pure Iron Ingot",
-  "recipe-alternate-pure-quartz-crystal": "Alternate: Pure Quartz Crystal",
-  "recipe-alternate-recycled-rubber": "Alternate: Recycled Rubber",
-  "recipe-alternate-rubber-concrete": "Alternate: Rubber Concrete",
-  "recipe-alternate-steamed-copper-sheet": "Alternate: Steamed Copper Sheet",
-  "recipe-alternate-steel-coated-plate": "Alternate: Steel Coated Plate",
-  "recipe-alternate-steel-rod": "Alternate: Steel Rod",
-  "recipe-alternate-turbo-heavy-fuel": "Alternate: Turbo Heavy Fuel",
-  "recipe-alternate-wet-concrete": "Alternate: Wet Concrete",
-  "recipe-pure-aluminum-ingot": "Alternate: Pure Aluminum Ingot",
-  "recipe-alternate-beacon-1": "Alternate: Crystal Beacon",
-  "recipe-alternate-cable-1": "Alternate: Insulated Cable",
-  "recipe-alternate-cable-2": "Alternate: Quickwire Cable",
-  "recipe-alternate-circuit-board-1": "Alternate: Silicone Circuit Board",
-  "recipe-alternate-circuit-board-2": "Alternate: Caterium Circuit Board",
-  "recipe-alternate-coal-1": "Alternate: Charcoal",
-  "recipe-alternate-coal-2": "Alternate: Biocoal",
-  "recipe-alternate-computer-1": "Alternate: Caterium Computer",
-  "recipe-alternate-computer-2": "Alternate: Crystal Computer",
-  "recipe-alternate-concrete": "Alternate: Fine Concrete",
-  "recipe-alternate-crystal-oscillator": "Alternate: Insulated Crystal Oscillator",
-  "recipe-alternate-electromagnetic-control-rod-1": "Alternate: Electromagnetic Connection Rod",
-  "recipe-alternate-encased-industrial-beam": "Alternate: Encased Industrial Pipe",
-  "recipe-alternate-enriched-coal": "Alternate: Compacted Coal",
-  "recipe-alternate-gunpowder-1": "Alternate: Fine Black Powder",
-  "recipe-alternate-heat-sink-1": "Alternate: Heat Exchanger",
-  "recipe-alternate-high-speed-connector": "Alternate: Silicone High-Speed Connector",
-  "recipe-alternate-ingot-iron": "Alternate: Iron Alloy Ingot",
-  "recipe-alternate-ingot-steel-1": "Alternate: Solid Steel Ingot",
-  "recipe-alternate-ingot-steel-2": "Alternate: Compacted Steel Ingot",
-  "recipe-alternate-modular-frame": "Alternate: Steeled Frame",
-  "recipe-alternate-modular-frame-heavy": "Alternate: Heavy Encased Frame",
-  "recipe-alternate-motor-1": "Alternate: Rigour Motor",
-  "recipe-alternate-nobelisk-1": "Alternate: Seismic Nobelisk",
-  "recipe-alternate-nuclear-fuel-rod-1": "Alternate: Nuclear Fuel Unit",
-  "recipe-alternate-plastic-1": "Alternate: Recycled Plastic",
-  "recipe-alternate-quickwire": "Alternate: Fused Quckwire",
-  "recipe-alternate-radio-control-unit-1": "Alternate: Radio Control System",
-  "recipe-alternate-reinforced-iron-plate-1": "Alternate: Bolted Iron Plate",
-  "recipe-alternate-reinforced-iron-plate-2": "Alternate: Stitched Iron Plate",
-  "recipe-alternate-rotor": "Alternate: Steel Rotor",
-  "recipe-alternate-screw": "Alternate: Casted Screw",
-  "recipe-alternate-screw-2": "Alternate: Steel Screw",
-  "recipe-alternate-silica": "Alternate: Cheap Silica",
-  "recipe-alternate-stator": "Alternate: Quickwire Stator",
+  "recipe-alternate-adhered-iron-plate": "Adhered Iron Plate",
+  "recipe-alternate-bolted-frame": "Bolted Frame",
+  "recipe-alternate-coated-cable": "Coated Cable",
+  "recipe-alternate-coated-iron-plate": "Coated Iron Plate",
+  "recipe-alternate-coke-steel-ingot": "Coke Steel Ingot",
+  "recipe-alternate-copper-alloy-ingot": "Copper Alloy Ingot",
+  "recipe-alternate-copper-rotor": "Copper Rotor",
+  "recipe-alternate-diluted-packaged-fuel": "Diluted Packaged Fuel",
+  "recipe-alternate-electro-aluminum-scrap": "Electrode - Aluminum Scrap",
+  "recipe-alternate-electrode-circuit-board": "Electrode Circuit Board",
+  "recipe-alternate-flexible-framework": "Flexible Framework",
+  "recipe-alternate-fused-wire": "Fused Wire",
+  "recipe-alternate-heavy-flexible-frame": "Heavy Flexible Frame",
+  "recipe-alternate-heavy-oil-residue": "Heavy Oil Residue",
+  "recipe-alternate-high-speed-wiring": "Automated Speed Wiring",
+  "recipe-alternate-plastic-smart-plating": "Plastic Smart Plating",
+  "recipe-alternate-polyester-fabric": "Polyester Fabric",
+  "recipe-alternate-polymer-resin": "Polymer Resin",
+  "recipe-alternate-pure-caterium-ingot": "Pure Caterium Ingot",
+  "recipe-alternate-pure-copper-ingot": "Pure Copper Ingot",
+  "recipe-alternate-pure-iron-ingot": "Pure Iron Ingot",
+  "recipe-alternate-pure-quartz-crystal": "Pure Quartz Crystal",
+  "recipe-alternate-recycled-rubber": "Recycled Rubber",
+  "recipe-alternate-rubber-concrete": "Rubber Concrete",
+  "recipe-alternate-steamed-copper-sheet": "Steamed Copper Sheet",
+  "recipe-alternate-steel-coated-plate": "Steel Coated Plate",
+  "recipe-alternate-steel-rod": "Steel Rod",
+  "recipe-alternate-turbo-heavy-fuel": "Turbo Heavy Fuel",
+  "recipe-alternate-wet-concrete": "Wet Concrete",
+  "recipe-pure-aluminum-ingot": "Pure Aluminum Ingot",
+  "recipe-alternate-beacon-1": "Crystal Beacon",
+  "recipe-alternate-cable-1": "Insulated Cable",
+  "recipe-alternate-cable-2": "Quickwire Cable",
+  "recipe-alternate-circuit-board-1": "Silicone Circuit Board",
+  "recipe-alternate-circuit-board-2": "Caterium Circuit Board",
+  "recipe-alternate-coal-1": "Charcoal",
+  "recipe-alternate-coal-2": "Biocoal",
+  "recipe-alternate-computer-1": "Caterium Computer",
+  "recipe-alternate-computer-2": "Crystal Computer",
+  "recipe-alternate-concrete": "Fine Concrete",
+  "recipe-alternate-crystal-oscillator": "Insulated Crystal Oscillator",
+  "recipe-alternate-electromagnetic-control-rod-1": "Electromagnetic Connection Rod",
+  "recipe-alternate-encased-industrial-beam": "Encased Industrial Pipe",
+  "recipe-alternate-enriched-coal": "Compacted Coal",
+  "recipe-alternate-gunpowder-1": "Fine Black Powder",
+  "recipe-alternate-heat-sink-1": "Heat Exchanger",
+  "recipe-alternate-high-speed-connector": "Silicone High-Speed Connector",
+  "recipe-alternate-ingot-iron": "Iron Alloy Ingot",
+  "recipe-alternate-ingot-steel-1": "Solid Steel Ingot",
+  "recipe-alternate-ingot-steel-2": "Compacted Steel Ingot",
+  "recipe-alternate-modular-frame": "Steeled Frame",
+  "recipe-alternate-modular-frame-heavy": "Heavy Encased Frame",
+  "recipe-alternate-motor-1": "Rigour Motor",
+  "recipe-alternate-nobelisk-1": "Seismic Nobelisk",
+  "recipe-alternate-nuclear-fuel-rod-1": "Nuclear Fuel Unit",
+  "recipe-alternate-plastic-1": "Recycled Plastic",
+  "recipe-alternate-quickwire": "Fused Quckwire",
+  "recipe-alternate-radio-control-unit-1": "Radio Control System",
+  "recipe-alternate-reinforced-iron-plate-1": "Bolted Iron Plate",
+  "recipe-alternate-reinforced-iron-plate-2": "Stitched Iron Plate",
+  "recipe-alternate-rotor": "Steel Rotor",
+  "recipe-alternate-screw": "Casted Screw",
+  "recipe-alternate-screw-2": "Steel Screw",
+  "recipe-alternate-silica": "Cheap Silica",
+  "recipe-alternate-stator": "Quickwire Stator",
   "recipe-alternate-turbofuel": "Turbofuel",
-  "recipe-alternate-turbo-motor-1": "Alternate: Turbo Rigour Motor",
-  "recipe-alternate-uranium-cell-1": "Alternate: Infused Uranium Cell",
-  "recipe-alternate-wire-1": "Alternate: Iron Wire",
-  "recipe-alternate-wire-2": "Alternate: Caterium Wire",
+  "recipe-alternate-turbo-motor-1": "Turbo Rigour Motor",
+  "recipe-alternate-uranium-cell-1": "Infused Uranium Cell",
+  "recipe-alternate-wire-1": "Iron Wire",
+  "recipe-alternate-wire-2": "Caterium Wire",
   "recipe-ailimiter": "A.I. Limiter",
   "recipe-circuit-board": "Circuit Board",
   "recipe-electromagnetic-control-rod": "Electromagnetic Control Rod",
@@ -371,6 +363,37 @@
   "recipe-truck": "Truck",
   "recipe-freight-wagon": "Freight Car",
   "recipe-locomotive": "Locomotive",
+  "recipe-impure-liquid-oil": "Impure Crude Oil",
+  "recipe-normal-liquid-oil": "Normal Crude Oil",
+  "recipe-pure-liquid-oil": "Pure Crude Oil",
+  "recipe-water": "Water",
+  "recipe-impure-ore-iron": "Impure Iron Ore",
+  "recipe-normal-ore-iron": "Normal Iron Ore",
+  "recipe-pure-ore-iron": "Pure Iron Ore",
+  "recipe-impure-ore-copper": "Impure Copper Ore",
+  "recipe-normal-ore-copper": "Normal Copper Ore",
+  "recipe-pure-ore-copper": "Pure Copper Ore",
+  "recipe-impure-coal": "Impure Coal",
+  "recipe-normal-coal": "Normal Coal",
+  "recipe-pure-coal": "Pure Coal",
+  "recipe-impure-ore-gold": "Impure Caterium Ore",
+  "recipe-normal-ore-gold": "Normal Caterium Ore",
+  "recipe-pure-ore-gold": "Pure Caterium Ore",
+  "recipe-impure-raw-quartz": "Impure Raw Quartz",
+  "recipe-normal-raw-quartz": "Normal Raw Quartz",
+  "recipe-pure-raw-quartz": "Pure Raw Quartz",
+  "recipe-impure-stone": "Impure Limestone",
+  "recipe-normal-stone": "Normal Limestone",
+  "recipe-pure-stone": "Pure Limestone",
+  "recipe-impure-sulfur": "Impure Sulfur",
+  "recipe-normal-sulfur": "Normal Sulfur",
+  "recipe-pure-sulfur": "Pure Sulfur",
+  "recipe-impure-ore-bauxite": "Impure Bauxite",
+  "recipe-normal-ore-bauxite": "Normal Bauxite",
+  "recipe-pure-ore-bauxite": "Pure Bauxite",
+  "recipe-impure-ore-uranium": "Impure Uranium",
+  "recipe-normal-ore-uranium": "Normal Uranium",
+  "recipe-pure-ore-uranium": "Pure Uranium",
   "item-iron-plate-reinforced": "Reinforced Iron Plate",
   "item-modular-frame": "Modular Frame",
   "item-cable": "Cable",
@@ -473,6 +496,28 @@
   "item-sulfur": "Sulfur",
   "item-ore-bauxite": "Bauxite",
   "item-ore-uranium": "Uranium",
+  "building-assembler-mk1": "Assembler",
+  "building-constructor-mk1": "Constructor",
+  "building-foundry-mk1": "Foundry",
+  "building-manufacturer-mk1": "Manufacturer",
+  "building-oil-refinery": "Refinery",
+  "building-smelter-mk1": "Smelter",
+  "building-conveyor-attachment-merger": "Conveyor Merger",
+  "building-conveyor-attachment-splitter": "Conveyor Splitter",
+  "building-industrial-tank": "Industrial Fluid Buffer",
+  "building-pipe-storage-tank": "Fluid Buffer",
+  "building-miner-mk1": "Miner Mk1",
+  "building-miner-mk2": "Miner Mk.2",
+  "building-miner-mk3": "Miner Mk.3",
+  "building-oil-pump": "Oil Extractor",
+  "building-water-pump": "Water Extractor",
+  "building-pipeline-junction-cross": "Pipeline Junction Cross",
+  "building-pipeline-pump": "Pipeline Pump",
+  "building-storage-container-mk1": "Storage Container",
+  "building-storage-container-mk2": "Industrial Storage Container",
+
+  "typeRecipe": "Recipe",
+  "typeItem": "Item",
 
   "currently_selected": "Selected:",
   "selected_none": "None",
@@ -552,54 +597,54 @@
   "sam_ingot": "SAM Ingot",
   "copper_ingot": "Copper Ingot",
   "iron_ingot": "Iron Ingot",
-  "alternate_turbo_motor": "Alternate: Turbo Motor",
-  "alternate_black_powder": "Alternate: Black Powder",
-  "alternate_stator": "Alternate: Stator",
-  "alternate_silica": "Alternate: Silica",
-  "alternate_highspeed_connector": "Alternate: High-speed Connector",
+  "alternate_turbo_motor": "Turbo Motor",
+  "alternate_black_powder": "Black Powder",
+  "alternate_stator": "Stator",
+  "alternate_silica": "Silica",
+  "alternate_highspeed_connector": "High-speed Connector",
   "biomass_alien_organs": "Biomass (Alien Organs)",
-  "alternate_concrete": "Alternate: Concrete",
-  "alternate_compacted_coal": "Alternate: Compacted Coal",
+  "alternate_concrete": "Concrete",
+  "alternate_compacted_coal": "Compacted Coal",
   "power_shard_1": "Power Shard (1)",
-  "alternate_cable": "Alternate: Cable",
+  "alternate_cable": "Cable",
   "iron_wire": "Iron Wire",
-  "alternate_beacon": "Alternate: Beacon",
+  "alternate_beacon": "Beacon",
   "wood_coal": "Wood Coal",
-  "alternate_reinforced_iron_plate": "Alternate: Reinforced Iron Plate",
+  "alternate_reinforced_iron_plate": "Reinforced Iron Plate",
   "quickwire_circuit_board": "Quickwire Circuit Board",
   "biomass_wood": "Biomass (Wood)",
   "enriched_steel_ingot": "Enriched Steel Ingot",
-  "alternate_circuit_board": "Alternate: Circuit Board",
+  "alternate_circuit_board": "Circuit Board",
   "biomass_alien_carapace": "Biomass (Alien Carapace)",
   "power_shard_2": "Power Shard (2)",
   "biomass_mycelia": "Biomass (Mycelia)",
-  "alternate_screw": "Alternate: Screw",
+  "alternate_screw": "Screw",
   "biomass_coal": "Biomass Coal",
-  "alternate_steel_ingot": "Alternate: Steel Ingot",
-  "alternate_crystal_oscillator": "Alternate: Crystal Oscillator",
+  "alternate_steel_ingot": "Steel Ingot",
+  "alternate_crystal_oscillator": "Crystal Oscillator",
   "crystal_computer": "Crystal Computer",
-  "alternate_heavy_modular_frame": "Alternate: Heavy Modular Frame",
-  "alternate_plastic": "Alternate: Plastic",
-  "alternate_motor": "Alternate: Motor",
+  "alternate_heavy_modular_frame": "Heavy Modular Frame",
+  "alternate_plastic": "Plastic",
+  "alternate_motor": "Motor",
   "stitched_iron_plate": "Stitched Iron Plate",
   "caterium_wire": "Caterium Wire",
   "iron_ingot_alloy": "Iron Ingot Alloy",
-  "alternate_rotor": "Alternate: Rotor",
+  "alternate_rotor": "Rotor",
   "steel_screw": "Steel Screw",
   "biomass_leaves": "Biomass (Leaves)",
-  "alternate_uranium_cell": "Alternate: Uranium Cell",
-  "alternate_computer": "Alternate: Computer",
-  "alternate_nobelisk": "Alternate: Nobelisk",
+  "alternate_uranium_cell": "Uranium Cell",
+  "alternate_computer": "Computer",
+  "alternate_nobelisk": "Nobelisk",
   "power_shard_5": "Power Shard (5)",
-  "alternate_radio_control_unit": "Alternate: Radio Control Unit",
-  "alternate_nuclear_fuel_rod": "Alternate: Nuclear Fuel Rod",
-  "alternate_turbofuel": "Alternate: Turbofuel",
+  "alternate_radio_control_unit": "Radio Control Unit",
+  "alternate_nuclear_fuel_rod": "Nuclear Fuel Rod",
+  "alternate_turbofuel": "Turbofuel",
   "quickwire_cable": "Quickwire Cable",
-  "alternate_encased_industrial_beam": "Alternate: Encased Industrial Beam",
-  "alternate_quickwire": "Alternate: Quickwire",
-  "alternate_modular_frame": "Alternate: Modular Frame",
-  "alternate_heat_sink": "Alternate: Heat Sink",
-  "alternate_electromagnetic_control_rod": "Alternate: Electromagnetic Control Rod",
+  "alternate_encased_industrial_beam": "Encased Industrial Beam",
+  "alternate_quickwire": "Quickwire",
+  "alternate_modular_frame": "Modular Frame",
+  "alternate_heat_sink": "Heat Sink",
+  "alternate_electromagnetic_control_rod": "Electromagnetic Control Rod",
   "impure_bauxite_node": "Impure Bauxite Node",
   "normal_bauxite_node": "Normal Bauxite Node",
   "pure_bauxite_node": "Pure Bauxite Node",
